--- a/src/onoff.scss
+++ b/src/onoff.scss
@@ -6,31 +6,45 @@
 
 $font: Trebuchet, Arial, sans-serif;
 $width: 70px;
-$borderSize: 2px;
+$borderSize: 1px;
 $animationTime: 0.2s;
 $easing: ease-in;
 
-$switchBackground: #ffffff;
+$switchBackground: rgb(230, 230, 230);
 $switchBorderColor: #999999;
 $switchWidth: 18px;
 $switchMargin: 4px;
 
 .onoffswitch {
-	position: relative; width: $width;
-	user-select: none;
+	position: relative;
+	width: $width;
+  	-webkit-user-select: none;
+  	-moz-user-select: none;
+  	-ms-user-select: none;
+  	user-select: none;
 }
-
+.onoffswitch .onoffswitch-checkbox,
 .onoffswitch-checkbox {
 	display: none;
 }
 
 .onoffswitch-label {
-	display: block; overflow: hidden;
+	display: block;
+	overflow: hidden;
 	cursor: pointer;
 	border: $borderSize solid $switchBorderColor;
-	border-radius: 20px;
+	border-radius: 4px;
+  	margin: 0px;
 }
-
+.onoffswitch-label.deactivate
+{
+	opacity: 0.5;
+	filter: alpha(opacity=30);
+	cursor: default !important;
+}
+.onoffswitch-label.deactivate .onoffswitch-switch{
+	filter: alpha(opacity=30);
+}
 .onoffswitch-inner {
 	width: 200%;
 	margin-left: -100%;
@@ -38,37 +52,56 @@ $switchMargin: 4px;
 }
 
 .onoffswitch-inner:before, .onoffswitch-inner:after {
-	float: left; padding: 0;
-	width: 50%; height: 26px;
+	float: left;
+	padding: 0;
+	width: 50%;
+  height: 33px;
 	color: white;
 	font: bold 14px/26px $font;
 	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+  	-moz-box-sizing: border-box;
 }
 
 .onoffswitch-inner:before {
-	content: "YES";
+  content: "ON";
 	padding-left: 10px;
 	color: #FFFFFF;
-	background-color: #2FCCFF;
+  background-color: #1dade5;
+  background-image: linear-gradient(rgb(23, 162, 216), rgb(29, 173, 229));
+  background-image: -webkit-linear-gradient(rgb(23, 162, 216), rgb(29, 173, 229));
+  background-repeat: repeat-x;
 }
 
 .onoffswitch-inner:after {
-	content: "NO";
+  content: "OFF";
 	padding-right: 10px;
-	color: #999999;
+  color: #333333;
 	background-color: #EEEEEE;
 	text-align: right;
+
+  background-color: rgb(240, 240, 240);
+  background-image: linear-gradient(rgb(230, 230, 230), rgb(255, 255, 255));
+  background-image: -webkit-linear-gradient(rgb(230, 230, 230), rgb(255, 255, 255));
+  background-repeat: repeat-x;
 }
 
 .onoffswitch-switch {
 	position: absolute;
-	top: 0; bottom: 0;
+	top: 0;
+	bottom: 0;
 	right: $width - $switchWidth - ($switchMargin * 2) - ($borderSize * 2);
-	width: $switchWidth; margin: $switchMargin;
+	width: $switchWidth; 
+	margin: $switchMargin;
 	background: $switchBackground;
 	border: $borderSize solid $switchBorderColor;
 	border-radius: 20px;
 	transition: right $animationTime $easing, box-shadow $animationTime $easing;
+	
+	background-color: $switchBackground;
+	background-image: linear-gradient(rgb(205, 204, 203), rgb(157, 148, 140));
+	background-image: -webkit-linear-gradient(rgb(205, 204, 203), rgb(157, 148, 140));
+	background-repeat: repeat-x;
 }
 
 // Checked
